# Meinrag

./: .env.example  .gitignore  CLAUDE.md  COLLECTIONS_SUMMARY.md  EMEINRAGfrontendsrcApp.css  IMPLEMENTATION_PLAN.md  QUICK_START_COLLECTIONS.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  screenshot.js  test.py  test_chatbot.py  test_collections.py
.claude/: settings.local.json
.claude/skills/code-explainer/: README.md  SKILL.md
.claude/skills/email-notify/: SKILL.md
.claude/skills/screenshot-debug/: SKILL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: classification.py  config.py  dependencies.py  main.py
app/db/: models.py  repositories.py  session.py
app/llm/: provider.py
app/models/: document.py  schemas.py
app/rag/: chain.py  memory.py  prompts.py
app/routers/: documents.py  health.py  query.py  users.py
app/services/: collection_suggester.py  document_processor.py
app/vectorstore/: base.py  chroma_store.py  factory.py  faiss_store.py
docs/: CLASSIFICATION.md  CODE_REVIEW.md  FIX_PLAN.md  FRONTEND_DESIGN.md  HOW_TO_RUN.md  IMPLEMENTATION_PLAN.md  TEST_PLAN.md  UPLOAD_LOGIC.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
scripts/: init_test_db.sql  migrate_json_to_pg.py
tests/: conftest.py  test_api_errors.py  test_api_workflow.py  test_chain.py  test_config.py  test_document_processing.py  test_frontend_e2e.py  test_memory.py  test_registry.py  test_schemas.py  test_suggest.py  test_vectorstore.py
(+1 files in other folders)
